admin added, db, model added

--- a/makeNews/templates/toi.html
+++ b/makeNews/templates/toi.html
@@ -362,7 +362,7 @@ function axs(){ntsss.getInstance().ajxcArr.push(arguments[0])}function isq(){ret
     <script>
         try{axs("//timesofindia.indiatimes.com/acms/javascript/oas.js?maxads=-16447215&AgcZ=-1929062288&mYGh=136072768&ad_channel=-267470425")}catch(e){}
     </script>
-    <script src="{% static 'toi/version-9minify' %}-1.cms"></script>
+    <script src="{% static 'toi/version-9minify-1.js' %}"></script>
     <script src="{% static 'toi/version-40minify' %}-1.js"></script>
     <script src="{% static 'toi/main.js' %}"></script>
     <script async="" src="{% static 'toi/chartbeat_video.js' %}"></script>
@@ -1172,7 +1172,7 @@ Click to watch</div></div></div></a></div></div><div class="mCSB_scrollTools"
                                 Honduras and Guatemala – who are currently marching towards the southern
                                 US border of Mexico with the intention to enter the US.
                             </div>
-                            <span class="time_cptn"><span itemprop="author"><span>PTI</span></span> | <span>Updated: Nov 3, 2018, 12:07 IST<time
+                            <span class="time_cptn"><span itemprop="author"><span>PTI</span></span> | <span>Updated:{{ fakeNews }}<time
                                     datetime="2018-11-03T12:07:02+05:30"></time><meta
                                     content="2018-11-03T12:07:02+05:30"></span></span>
                             <div class="leftsocial sticky">
