initial form linkage done

--- a/makeNews/templates/new_news_form.html
+++ b/makeNews/templates/new_news_form.html
@@ -12,18 +12,13 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-10 "><h1>Renew: {{ book_instance.book.title }}</h1>
-            <p>Borrower: {{ book_instance.borrower }}</p>
-            <p{% if book_instance.is_overdue %} class="text-danger"{% endif %}>Due date: {{ book_instance.due_back
-            }}</p>
-
+            <p>Borrower: {{ fake_news.borrower }}</p>
             <form action="" method="post">
                 {% csrf_token %}
                 {{ form.as_table }}
                 <input type="submit" value="Submit">
             </form>
         </div>
-        </span>
     </div>
 </div>
 </div>
