--- a/makeNews/templates/new_news_form.html
+++ b/makeNews/templates/new_news_form.html
@@ -1,26 +1,121 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Local Library</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--credits https://codepen.io/colorlib/pen/KVoZyv-->
+
+{% extends "base_news.html" %}
+{% load static %}
+
+{% block linkcss %}
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'makeNews/styles.css' %}" type="text/css"/>
-</head>
-<body>
-<div class="container-fluid">
-    <div class="row">
-            <p>Borrower: {{ fake_news.borrower }}</p>
+{% endblock %}
+{% block content %}
+
+<style type="text/css">
+  @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);
+
+  * {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-font-smoothing:antialiased;
+    -moz-font-smoothing:antialiased;
+    -o-font-smoothing:antialiased;
+    font-smoothing:antialiased;
+    text-rendering:optimizeLegibility;
+  }
+
+  body {
+    font-family:"Open Sans", Helvetica, Arial, sans-serif;
+    font-weight:300;
+    font-size: 22px;
+    line-height:30px;
+    color:#222;
+    background:#0CF;
+  }
+
+  .container {
+    max-width:700px;
+    width:100%;
+    margin:0 auto;
+    position:relative;
+  }
+
+  #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
+    width:100%;
+    border:1px solid #CCC;
+    background:#FFF;
+    margin:0 0 5px;
+    padding:10px;
+  }
+
+  #contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+    -webkit-transition:border-color 0.3s ease-in-out;
+    -moz-transition:border-color 0.3s ease-in-out;
+    transition:border-color 0.3s ease-in-out;
+    border:1px solid #AAA;
+  }
+
+  #contact textarea {
+    height:100px;
+    max-width:100%;
+    resize:none;
+  }
+
+  #contact button[type="submit"] {
+    cursor:pointer;
+    width:100%;
+    border:none;
+    background:#0CF;
+    color:#FFF;
+    margin:0 0 5px;
+    padding:10px;
+    font-size:15px;
+  }
+
+  #contact button[type="submit"]:hover {
+    background:#09C;
+    -webkit-transition:background 0.3s ease-in-out;
+    -moz-transition:background 0.3s ease-in-out;
+    transition:background-color 0.3s ease-in-out;
+  }
+
+  #contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+  #contact input:focus, #contact textarea:focus {
+    outline:0;
+    border:1px solid #999;
+  }
+  ::-webkit-input-placeholder {
+   color:#888;
+  }
+  :-moz-placeholder {
+   color:#888;
+  }
+  ::-moz-placeholder {
+   color:#888;
+  }
+  :-ms-input-placeholder {
+   color:#888;
+  }
+
+
+
+</style>
+
+<br>
+<br>
+    <div class="container-fluid">
+        <div class="row">
             <form action="" method="post">
                 {% csrf_token %}
-                {{ form.as_table }}
+                {{ form.as_p }}
                 <input type="submit" value="Submit">
             </form>
         </div>
     </div>
-</div>
-</div>
-</body>
-</html>
+{% endblock %}
+
