--- a/makeNews/templates/welcome.html
+++ b/makeNews/templates/welcome.html
@@ -1,132 +1,85 @@
 <!--credits: https://github.com/BlackrockDigital/startbootstrap-heroic-features-->
+{% extends "base_news.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-  <head>
+{% block linkcss %}
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<!-- Bootstrap core CSS -->
 
-    <title>News</title>
+<link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="{% static 'css/heroic-features.css' %}" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/heroic-features.css' %}" rel="stylesheet">
 
-  </head>
+{% endblock %}
+{% block content %}
 
-  <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">News</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<!-- Jumbotron Header -->
+<header class="jumbotron my-4">
+    <h1 class="display-3">Welcome to news!!</h1>
+    <p class="lead">A fake news building and hosting website.</p>
+</header>
 
-    <!-- Page Content -->
-    <div class="container">
+<!-- Page Features -->
+<div class="row text-center">
 
-      <!-- Jumbotron Header -->
-      <header class="jumbotron my-4">
-        <h1 class="display-3">Welcome to news!!</h1>
-        <p class="lead">A fake news building and hosting website.</p>
-      </header>
-
-      <!-- Page Features -->
-      <div class="row text-center">
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
+    <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card">
             <img class="card-img-top" src="{% static 'makeNews/images/toi.png' %}" alt="">
             <div class="card-body">
-              <h4 class="card-title">Times of India</h4>
-              <p class="card-text">The Times of India is a highly reputed frontline Indian newspaper.</p>
+                <h4 class="card-title">Times of India</h4>
+                <p class="card-text">The Times of India is a highly reputed frontline Indian newspaper.</p>
             </div>
             <div class="card-footer">
-              <a href="makenews/" class="btn btn-primary">Go!</a>
+                <a href="makenews/" class="btn btn-primary">Go!</a>
             </div>
-          </div>
         </div>
+    </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
+    <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card">
             <img class="card-img-top" src="{% static 'makeNews/images/eco.png' %}" alt="">
             <div class="card-body">
-              <h4 class="card-title">Economic Times</h4>
-              <p class="card-text">The Economic Times is the most popular and trusted newspaper brand when it comes to delivering all the news and happenings of the financial world. </p>
+                <h4 class="card-title">Economic Times</h4>
+                <p class="card-text">The Economic Times is the most popular and trusted newspaper brand when it
+                    comes to delivering all the news and happenings of the financial world. </p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Go!</a>
+                <a href="#" class="btn btn-primary">Go!</a>
             </div>
-          </div>
         </div>
+    </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
+    <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card">
             <img class="card-img-top" src="{% static 'makeNews/images/ht.jpeg' %}" alt="">
             <div class="card-body">
-              <h4 class="card-title">The Hindustan Times</h4>
-              <p class="card-text">The site of The Hindustan Times, one of the prestigious newspapers in the country, welcomes you with the top stories, news and events of the day. </p>
+                <h4 class="card-title">The Hindustan Times</h4>
+                <p class="card-text">The site of The Hindustan Times, one of the prestigious newspapers in the
+                    country, welcomes you with the top stories, news and events of the day. </p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Go!</a>
+                <a href="#" class="btn btn-primary">Go!</a>
             </div>
-          </div>
         </div>
+    </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
+    <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card">
             <img class="card-img-top" src="{% static 'makeNews/images/th.png' %}" alt="">
             <div class="card-body">
-              <h4 class="card-title">The Hindu</h4>
-              <p class="card-text">The Hindu is a celebrated and prestigious name in the history of Indian journalism.</p>
+                <h4 class="card-title">The Hindu</h4>
+                <p class="card-text">The Hindu is a celebrated and prestigious name in the history of Indian
+                    journalism.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Go!</a>
+                <a href="#" class="btn btn-primary">Go!</a>
             </div>
-          </div>
         </div>
-
-      </div>
-
     </div>
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; News 2018</p>
-      </div>
-    </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+</div>
 
-  </body>
-
-</html>
+{% endblock %}
